--- a/A1.md
+++ b/A1.md
@@ -13,11 +13,13 @@ Learning objective:
 - Practice using Google.
 - Practice reading/understanding API documentations, which has became a critical skill in Data Science. 
 
-If you still prefer having a book as reference:
-- Panda example references: https://riptutorial.com/Download/pandas.pdf (some of them are not very clean)
-- Scikit-learn guide: http://www.smallake.kr/wp-content/uploads/2017/03/Mastering-Machine-Learning-with-scikit-learn.pdf
+If you prefer having a book as reference:
+- [Panda example references](https://riptutorial.com/Download/pandas.pdf) (some of the examples are not very clean)
+- [A scikit-learn guide](http://www.smallake.kr/wp-content/uploads/2017/03/Mastering-Machine-Learning-with-scikit-learn.pdf)
 
-####
+#### Data Manipulation
+
+First, open a Google Colab notebook or a Jupyter notebook on your laptop. 
 
 
 
