--- a/A1.md
+++ b/A1.md
@@ -1,13 +1,13 @@
 
-### A1 - Data Manipulation, Data Visualization, and Data Preprocessing
+# A1 - Data Manipulation, Data Visualization, and Data Preprocessing
 
 ![image](https://user-images.githubusercontent.com/8474647/105572271-21ab1c80-5d24-11eb-9088-ce16aff15eac.png)
 
 
-In this assignment, we will practice several basic data manipulation techniques. 
-You are not supposed to remmeber all the APIs. Even myself has to Google/StackOverflow all the time.
+In this assignment, we will practice several typical data manipulation techniques. 
+You are not supposed to remmeber all the APIs. Even myself has to Google/StackOverflow all the time with my tiny brain.
 But in a lot of cases, there are many different ways to do the same thing. 
-The purpose of this assignment is for you to see a cleaner version of the APIs, and to understand several different data related concepts (by Googling.
+The purpose of this assignment is for you to see a cleaner version of the API usage, and to understand several different data related concepts (by Googling.
 
 Learning objective:
 - Practice using Google.
@@ -17,10 +17,86 @@ If you prefer having a book as reference:
 - [Panda example references](https://riptutorial.com/Download/pandas.pdf) (some of the examples are not very clean)
 - [A scikit-learn guide](http://www.smallake.kr/wp-content/uploads/2017/03/Mastering-Machine-Learning-with-scikit-learn.pdf)
 
-#### Data Manipulation
+Delivery:
+- A step-by-step Jupyter notebook with your answers to the questions.
 
-First, open a Google Colab notebook or a Jupyter notebook on your laptop. 
+### Environment Setup
 
+1. Open a Google Colab notebook or a Jupyter notebook on your laptop. If it is on your local machine, please also install pandas and scikit-learn by:
+```
+conda activate your_372_environment # this may be different depending on your system & assumes that you have created an environment
+pip install pandas
+pip install scikit-learn
+```
+2. In the first cell, run the code below to make sure everything is okay without any errors:
 
+```python
+import pandas
+import sklearn
+print(pandas.__version__)
+print(sklearn.__version__)
+print('alright I am done. this is too easy for me.')
+```
+
+Question: describe which option you use and what is your setup.
+
+### Data Loading 
+
+1. This is the link to our [csv file ](https://github.com/CISC-372/Assignments/releases/download/a1/train.csv)
+2. Download the file and try to load it into a panda dataframe using its path. If you use Google Colab, you need to upload the file to the folder tree panal on the left. 
+```python
+import pandas as pd # we already did but usually people use pd as its abbreviation.
+df = pd.read_csv(your_csv_file_path) # df usually is the abbreviation for `data frame` (like a table)
+```
+3. We can also load the file directly from url:
+```python
+import pandas as pd # we already did but usually people use pd as its abbreviation.
+df = pd.read_csv('https://github.com/CISC-372/Assignments/releases/download/a1/train.csv')
+```
+4. Let's inspect some data.
+```python
+print(df)
+```
+5. Next, we will try out some APIs to explore the dataset (you may want to do it one-by-one). Describe what you see and what is your interepretation of each of them.
+```python
+df.describe() # run this in a seperate cell then the notebook will put the result into a nice table
+print(df.columns)
+print(df.columns[0])
+print(df.describe())
+```
+
+### Data Manipulation
+
+Try out the following commands, and describe what are your interpretations.
+
+1. Select a/some column[s]:
+```python
+df.bathrooms
+df.bathrooms.describe()
+df[['bathrooms', 'bedrooms']]
+df[['bathrooms', 'bedrooms', 'beds', 'guests_included']].describe()
+```
+2. Select a/some row[s]:
+```python
+df.iloc[1]
+df.iloc[2]
+df.iloc[2:10]
+df.iloc[[1,3,4,9,19,45]]
+df.iloc[[1,3,4,9,19,45]].describe()
+```
+3. Select rows based on certain conditions:
+```python
+df.loc[df['beds'] > 3] 
+df.loc[(df['bedrooms'] > 3) & (df['beds'] > 3)] 
+df.loc[df['bedrooms'] > df['beds']] 
+df.loc[df['
+
+```
+1. Select some rows based on the condition:
+```python
+df.loc[df['beds'] > 3] 
+df.loc[(df['bedrooms'] > 3) & (df['beds'] > 3)] 
+df.loc[df['bedrooms'] > df['beds']]
+```
 
 
