--- a/A1.md
+++ b/A1.md
@@ -27,12 +27,14 @@ Delivery:
 conda activate your_372_environment # this may be different depending on your system & assumes that you have created an environment
 pip install pandas
 pip install scikit-learn
+pip install seaborn
 ```
 2. In the first cell, run the code below to make sure everything is okay without any errors:
 
 ```python
 import pandas
 import sklearn
+import seaborn
 print(pandas.__version__)
 print(sklearn.__version__)
 print('alright I am done. this is too easy for me.')
@@ -60,7 +62,7 @@ print(df)
 5. Next, we will try out some APIs to explore the dataset (you may want to do it one-by-one). Describe what you see and what is your interepretation of each of them.
 ```python
 df.describe() # run this in a seperate cell then the notebook will put the result into a nice table
-print(df.columns)
+print(list(df.columns))
 print(df.columns[0])
 print(df.describe())
 ```
@@ -84,19 +86,49 @@ df.iloc[2:10]
 df.iloc[[1,3,4,9,19,45]]
 df.iloc[[1,3,4,9,19,45]].describe()
 ```
-3. Select rows based on certain conditions:
-```python
-df.loc[df['beds'] > 3] 
-df.loc[(df['bedrooms'] > 3) & (df['beds'] > 3)] 
-df.loc[df['bedrooms'] > df['beds']] 
-df.loc[df['
-
-```
-1. Select some rows based on the condition:
+5. Select some rows based on the condition:
 ```python
 df.loc[df['beds'] > 3] 
 df.loc[(df['bedrooms'] > 3) & (df['beds'] > 3)] 
 df.loc[df['bedrooms'] > df['beds']]
+df.loc[df['room_type'] == 'Private room'].describe()
+df.loc[df['room_type'].isin(['Hotel room', 'Private room'])].describe()
 ```
+6. Noted that every time you select the rows or part of the tables, actually we are copying them into a new table. So the original df will not be changed.
+If you try:
+```
+df_beds = df.loc[df['beds'] > 3] 
+print(df)
+print(df_beds)
+```
+They are different. 
+
+### Dataframe visualization:
+
+Try out the following commands, and describe what are your interpretations. (you neeed to run commands it one-by-one)
+1. historgram:
+```python
+df.bathrooms.hist()
+df.bedrooms.hist(bins=[0,1,2,3,4])
+```
+2. scatter (see relation):
+```python
+df.plot.scatter(x='guests_included',y='beds')
+df.plot.scatter(x='bedrooms',
+                      y='beds',
+                      c='guests_included',
+                      colormap='viridis')
+```
+3. Feature correlation
+```python
+import seaborn as sns
+sns.heatmap(data=df[['bathrooms', 'bedrooms', 'beds', 'guests_included']].corr(), annot=True)
+```
+4. More hist:
+```python
+df[['bathrooms', 'bedrooms', 'beds', 'guests_included']].plot.hist(alpha=0.3, bins=[1,2,3,4,5,6]);
+```
+
+
 
 
