--- a/A1.md
+++ b/A1.md
@@ -94,7 +94,7 @@ df.loc[df['bedrooms'] > df['beds']]
 df.loc[df['room_type'] == 'Private room'].describe()
 df.loc[df['room_type'].isin(['Hotel room', 'Private room'])].describe()
 ```
-6. Noted that every time you select the rows or part of the tables, actually we are copying them into a new table. So the original df will not be changed.
+6. Noted that every time we select the rows or part of the tables, actually we are creating a new variable. 
 If you try:
 ```
 df_beds = df.loc[df['beds'] > 3] 
@@ -129,6 +129,26 @@ sns.heatmap(data=df[['bathrooms', 'bedrooms', 'beds', 'guests_included']].corr()
 df[['bathrooms', 'bedrooms', 'beds', 'guests_included']].plot.hist(alpha=0.3, bins=[1,2,3,4,5,6]);
 ```
 
+### Preprocessing:
+
+Try out the following commands, and describe what are your interpretations. (you neeed to run commands it one-by-one)
+1. Missing value statistics:
+```python
+# Any missing values?
+df.isnull().values.any()
+
+# Total number of missing values
+df.isnull().sum().sum()
+```
+2. Handle missing values:
+```python
+df_new = df.dropna()
+df_new = df[df['beds'].notna()]
+df_new = df[df['beds'].notna() & df['bedrooms'].notna()]
+
+# noted that df is edited in-place here 
+df['beds'].fillna((df['beds'].mean()), inplace=True)
+```
 
 
 
