--- a/A1.md
+++ b/A1.md
@@ -149,6 +149,21 @@ df_new = df[df['beds'].notna() & df['bedrooms'].notna()]
 # noted that df is edited in-place here 
 df['beds'].fillna((df['beds'].mean()), inplace=True)
 ```
+3. Categorical encoding:
+```python
+
+# printing first-10 rows' room types 
+print(list(df.room_type)[:10])
+
+# encoding
+encoded_room_type_columne = df.room_type.astype('category').cat.codes
+print(list(encoded_room_type_columne)[:10])
+
+# replace original:
+df.room_type = encoded_room_type_columne
+print(list(df.room_type)[:10])
+
+```
 
 
 
