--- a/A1.md
+++ b/A1.md
@@ -7,7 +7,7 @@
 In this assignment, we will practice several typical data manipulation techniques. 
 You are not supposed to remmeber all the APIs. Even myself has to Google/StackOverflow all the time with my tiny brain.
 But in a lot of cases, there are many different ways to do the same thing. 
-The purpose of this assignment is for you to see a cleaner version of the API usage, and to understand several different data related concepts (by Googling.
+The purpose of this assignment is for you to see a cleaner version of the API usage, and to understand several different data related concepts (by Googling).
 
 Learning objective:
 - Practice using Google.
@@ -45,7 +45,7 @@ Question: describe which option you use and what is your setup.
 ### Data Loading 
 
 1. This is the link to our [csv file ](https://github.com/CISC-372/Assignments/releases/download/a1/train.csv)
-2. Download the file and try to load it into a panda dataframe using its path. If you use Google Colab, you need to upload the file to the folder tree panal on the left. 
+2. Download the file and try to load it into a panda dataframe using its path. If you use Google Colab, you need to upload the file to the folder tree on the left. 
 ```python
 import pandas as pd # we already did but usually people use pd as its abbreviation.
 df = pd.read_csv(your_csv_file_path) # df usually is the abbreviation for `data frame` (like a table)
