--- a/A1.md
+++ b/A1.md
@@ -105,7 +105,7 @@ They are different.
 
 ### Dataframe visualization:
 
-Try out the following commands, and describe what are your interpretations. (you neeed to run commands it one-by-one)
+Try out the following commands, and describe what are your interpretations. (you neeed to run commands one-by-one)
 1. historgram:
 ```python
 df.bathrooms.hist()
